# dotfiles

./: .bashrc  .gitignore  .zsh_history  .zshrc  Automount.txt  CLAUDE.md  Silent boot.txt  arch.sh  archinstall.sh  archvm.sh  archxfce.sh  base - Copy.sh  base.sh  bspwm.sh  config.sh  fix-dns.sh  gaming.sh  gnome.sh  hybrid.sh  hyprland.sh  iconsWin.txt  install.sh  intel.sh  kde.sh  noctalia.sh  noctalia4.sh  noctalia5.sh  ntfs.sh  plymouth.sh  pop.sh  popdualboot.sh  popgaming.sh  poposboot.sh  postinstall.sh  programming.sh  programs.sh  rebuild-nautilus.sh  remove.sh  removesnap.sh  reset.sh  (+7 more)
.claude/: settings.local.json
.config/alacritty/: alacritty.yml
.config/bspwm/: bspwmrc
.config/i3/: config
.config/polybar/: config.ini  launch.sh  modules.ini
.config/rofi/: config.rasi  power.rasi
.config/sxhkd/: sxhkdrc
Elegant/: LoginFrame.qml
applications/launcher/: CREDITS  README.md  install.sh  meson.build
applications/launcher/data/: launcher.gresource.xml  launcher.service  meson.build  style.css
applications/launcher/src/: launcher-application.c  launcher-application.h  launcher-result-row.c  launcher-result-row.h  launcher-result.c  launcher-result.h  launcher-search.c  launcher-search.h  launcher-window.c  launcher-window.h  main.c  meson.build
applications/music/: CREDITS  README.md  install.sh  meson.build
applications/music/data/: dev.sandip.Music.desktop.in  meson.build
applications/music/src/: main.c  meson.build  music-all-songs-view.c  music-all-songs-view.h  music-application.c  music-application.h  music-library.c  music-library.h  music-player-bar.c  music-player-bar.h  music-player.c  music-player.h  music-playlist.c  music-playlist.h  music-playlists-view.c  music-playlists-view.h  music-preferences.c  music-preferences.h  music-song-row.c  music-song-row.h  music-song.c  music-song.h  music-window.c  music-window.h
applications/nautilus-fork/: PKGBUILD
apps/: Photoshop.desktop  spotify-adblock.desktop
apps/boxes/: org.gnome.Boxes.desktop
apps/resolve/: DaVinciResolve.desktop  davinci.sh
assets/: wg_us.conf
assets/Elegant/: LoginFrame.qml
assets/apps/: AdobePhotoshop.desktop  Alacritty.desktop  atril.desktop  code.desktop  com.obsproject.Studio.desktop  excel.desktop  google-chrome.desktop  libreoffice-base.desktop  libreoffice-calc.desktop  libreoffice-draw.desktop  libreoffice-impress.desktop  libreoffice-math.desktop  libreoffice-startcenter.desktop  libreoffice-writer.desktop  libreoffice-xsltfilter.desktop  org.freedesktop.IBus.Setup.desktop  org.gnome.FileRoller.desktop  org.gnome.Settings.desktop  org.nomacs.ImageLounge.desktop  org.xfce.mousepad.desktop  powerpoint.desktop  spotify-adblock.desktop  thunar.desktop  word.desktop
assets/gnome/: nautilus
assets/kde/: assistant.desktop  avahi-discover.desktop  bssh.desktop  bvnc.desktop  cmake-gui.desktop  designer.desktop  jconsole-java21-openjdk.desktop  jshell-java21-openjdk.desktop  linguist.desktop  org.kde.ark.desktop  org.kde.discover.desktop  org.kde.dolphin.desktop  org.kde.drkonqi.coredump.gui.desktop  org.kde.drkonqi.desktop  org.kde.kate.desktop  org.kde.kinfocenter.desktop  org.kde.kmenuedit.desktop  org.kde.konsole.desktop  org.kde.kwin.killer.desktop  org.kde.kwrite.desktop  org.kde.plasma-welcome.desktop  org.kde.plasma.emojier.desktop  org.kde.spectacle.desktop  org.nomacs.ImageLounge.desktop  qdbusviewer.desktop  systemsettings.desktop
assets/misc_apps/: DaVinciResolve.desktop  onlyoffice-desktopeditors.desktop
assets/noctalia-qs/: PKGBUILD
bspwm/: 90-touchpad.conf  backlight.rules  bsp.txt  bspwm.sh  remove.sh
bspwm/apps/: galculator.desktop  nwg-look.desktop  thunar.desktop
bspwm/bspwm/: bspwmrc
bspwm/dunst/: dunstrc
bspwm/polybar/: modules.ini
bspwm/sxhkd/: sxhkdrc
config/: .gtkrc-2.0
config/Thunar/: uca.xml
config/alacritty/: alacritty.toml  alacritty.yml
config/betterlockscreen/: betterlockscreenrc
config/bspwm/: bspwmrc
config/dunst/: dunstrc
config/gtk-3.0/: bookmarks  settings.ini
config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  hyprsunset.conf
config/vim/: vimrc
docs/: Extension List.txt  automount.txt  firefoxzoom.txt  fix-spotify.sh  gaming.txt  gnome-gpu-switch.txt  gnome.txt  gnomeapps.txt  ifelse.txt  kvm.txt  nautilus-patches.md  nautilus.txt  noctalia-patches.md  nvidia.txt  original-noctalia.txt  plymouth.txt  resolvefix.txt  secureboot.txt  silentboot.txt  systemd-dualboot.txt  thunar.txt  vbox.txt  xfce-bspwm.txt
gnome/: gnome.sh  remove.sh
gpu/: 50-remove-nvidia.rules  blacklist-nvidia.conf  hybrid.sh  intel.sh  nvidia.sh
hyprland/: .zprofile  h.sh  hyprland.sh  nomacs  override.conf  remove.sh
kde/: kde.sh
refind/: refind.conf
resolve/: DaVinciResolve.desktop
runtime/: install.sh
scripts/: .face.icon  .zshrc  90-usb.rules  99-power.rules  acpoweroff.service  acpoweron.service  aur.sh  automount.sh  battery.sh  flutter.sh  flutter_win.bat  gaming.sh  git.sh  gnome.sh  hyprland.sh  intel.sh  kde.sh  kvm.sh  override.conf  plymouth.sh  pop.sh  programs.sh  usb-insert.service  usb-remove.service  virtualbox.sh  zsh.sh
ubuntu/: ubuntu-debullshit.sh  ubuntu.sh
xbspwm/: bspwm.sh
(+568 files in other folders)
